proc-macros/tests/ui/incorrect/rpc/rpc_no_impls.stderr
error: Either 'server' or 'client' attribute must be applied
 --> $DIR/rpc_no_impls.rs:5:11
  |
5 | pub trait NoImpls {
  |           ^^^^^^^
